--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Giddy Tennor",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys":"^6.7.21",
+    "@whiskeysockets/baileys":"npm:wileys",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
     "pino": "^8.1.0",
